# vspcplay

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  wavewriter.c
.github/workflows/: codeql.yml  main.yml  mxe.yml
